--- a/style.css
+++ b/style.css
@@ -55,10 +55,13 @@ header{
 }
 
 .auth-section-main{
-    width: 50px;
+    size: 70px;
     display:grid;
     grid-template-columns: 1fr 1fr 1fr;
     box-sizing: border-box;
+    gap: 0px;
+    padding-right: 50px;
+    margin-top: 10px;
     
 }
 
@@ -69,7 +72,8 @@ header{
     
 }
 .auth img{
-    width: 500px;
+    width: 570px;
+    
 
 }
 .auth p { 
@@ -77,23 +81,25 @@ header{
 }
 .auth-main{
          margin-top: 70px;
-         margin-left: -10px;
+         margin-left: -50px;
 }
 .auth-main img{
-    width: 500px;
+    width: 570px;
 }
 .auth-main p{
     text-decoration: underline;
 }
 .auth-side{
      margin-top: 70px;
-     margin-left: 60px;
+     margin-left: 10px;
 }
 .auth-side img{
-    width: 500px;
+    width: 570px;
     align-items: flex-end;
     align-content: flex-end;
     float: right;
+    margin-left: -30px;
+
 }
 .auth-section-main div{
         font-size: 20px;
@@ -156,12 +162,117 @@ select{
         transform: translate(240px, 17px);
  }
 
- .countries ul{
-    display: grid;
-    grid-auto-flow: column;
-    margin-top: 24px;
-    justify-content: space-around;
-
+ 
+ .contries-uber{
+    justify-content: space-between;
+    display: block;
+    text-size-adjust: 100%;
+    font-family: UberMoveText, sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 44px;
+    padding-top: 24px;
  }
+.contries-uber h1{
+    font-size: 36px;
+    padding-top: 44px;
+    padding-left: 40px;
+    padding-bottom: 44px;
+
+}
+.view{
+    display: flex;
+    justify-content: right;
+    margin-top: -72px;
+    font-size: 16px;
+    padding-right: 40px;
+    text-decoration: underline;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+}
+.countries-list ul{
+    margin-left: 10px;
+}
+.countries-list ul{
+    display: grid;
+    grid-template-columns: 266.25px 266.25px 266.25px 200.25px;
+    grid-template-rows: 24px 24px 24px 24px 24px 24px 24px 24px;
+    margin-top: 24px;
+    row-gap: 24px;
+    grid-auto-flow: column;
+    column-gap: 20px;
+    text-size-adjust: 100%;
+    width: 85%;
+    justify-content: space-between;
+    margin-top: 24px;
+    text-decoration: none;
+    list-style: none;
+    padding-top: 20px;
+}
+.countries ul{
+    display: grid;
+    grid-template-columns: 266.25px 266.25px 266.25px  266.25px;
+    grid-template-rows: 24px 24px 24px 24px 24px 24px ; 
+    margin-top: 24px;
+    row-gap: 24px;
+    grid-auto-flow: column;
+    column-gap: 20px;
+    width: 85%;
+    justify-content: space-between;
+    text-decoration: none;
+    list-style: none;
+    font-family: UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif;;
+     
+}
+.map{
+    display: block;
+    height: 360px;
+}
+.map img{
+    padding-left: 35px;
+
+}
+.bottom-uber img{
+    display:flex;
+    margin-top: 80px;
+    margin-bottom: 64px;
+    padding-bottom: 88px;
+    padding-left: 260px;
+    padding-top: 72px;
+    text-size-adjust: 100%;
+}
+.end-card{
+    display: grid;
+    line-height: 40px;
+    grid-gap: 0px;
+    grid-template-columns: 1fr 1fr;
+    width: 700px;
+    justify-content: right;
+    margin-left: 850px;
+    transform: translateX(-10px);
+    transform: translateY(-180px);
+    
+}
  
- 
+.end-card ul {
+    text-decoration: none;
+    list-style: none;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    padding-right: 100px;
+
+}.crave-main h1{
+    padding-left: 35px;
+  }
+  .bottom-uber{
+    transform: translateX(50px);
+  }
+  .play img{
+    width: 134px;
+  }
+  .apple-play{
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    padding-right: 990px;
+    margin-bottom: 830px;
+  }
